# mydb

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/mydb/: parser.py  service.py  syntax.py
src/mydb/storage/: __init__.py
tests/: test_parser.py  test_table.py
