[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Federico Oberndorfer", email = "federico.ober@hotmail.com" },
]
name = "mydb"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "pydantic>=2.10.6",
    "pyparsing>=3.1.4",
]

[dependency-groups]
dev = [
    "hypothesis>=6.125.3",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
]

[tool.pytest.ini_options]
addopts = """
    --cov=mydb
    --cov-report=term-missing
"""
testpaths = ["tests"]

[tool.mypy]
files = ["src"]
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

[tool.ruff.lint]
extend-select = ["I", "C90", "PGH", "B"]
